crates/pandalang/src/snapshots/pandalang__parser__tests__parses@var__multi_letter.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/var/multi_letter.panda
---
Ok(
    Var(
        Var {
            name: "foo",
        },
    ),
)
