crates/pandalang/src/snapshots/pandalang__parser__tests__parses@var__prime.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/var/prime.panda
---
Ok(
    Var(
        Var {
            name: "x'",
        },
    ),
)
