crates/pandalang/src/snapshots/pandalang__parser__tests__parses@var__var.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/var/var.panda
---
Var(
    Var {
        name: "x",
    },
)
